完善swagger，添加redis、logger相关代码
