# docs/swagger.yaml
@@ -1,10 +1,25 @@
 definitions:
-  entity.ResponseBody:
+  entity.ResponseObject:
     properties:
       code:
         type: integer
       message:
         example: Some message about the code.
+        type: string
+    type: object
+  model.CreateVisitorVO:
+    properties:
+      email:
+        example: xxxxx@xx.com
+        type: string
+      mobile:
+        example: 13xxxxxxxxx
+        type: string
+      nickname:
+        example: PP同学
+        type: string
+      password:
+        example: "123456"
         type: string
     type: object
   model.Visitor:
@@ -44,45 +59,7 @@ info:
   title: PP同学个人博客接口文档
   version: "0.1"
 paths:
-  /v1/visitor/create:
-    post:
-      consumes:
-      - application/json
-      description: 输入信息来创建一个visitor
-      parameters:
-      - description: 访客电话号码
-        in: body
-        name: mobile
-        schema:
-          type: string
-      - description: 访客邮箱
-        in: body
-        name: email
-        schema:
-          type: string
-      - description: 访客昵称
-        in: body
-        name: nickname
-        required: true
-        schema:
-          type: string
-      - description: 访客密码
-        in: body
-        name: password
-        required: true
-        schema:
-          type: string
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/entity.ResponseBody'
-      summary: 新增visitor用户
-      tags:
-      - Visitor接口
-  /v1/visitor/info/{id}:
+  /v1/visitor/{id}:
     get:
       consumes:
       - application/json
@@ -100,7 +77,45 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Visitor'
+        "400":
+          description: 输入参数有误
+          schema:
+            $ref: '#/definitions/entity.ResponseObject'
+        "404":
+          description: 未找到资源
+          schema:
+            $ref: '#/definitions/entity.ResponseObject'
       summary: 获取单个visitor的信息（以id获取）
+      tags:
+      - Visitor接口
+  /v1/visitor/create:
+    post:
+      consumes:
+      - application/json
+      description: 输入信息来创建一个visitor
+      parameters:
+      - description: 注册访客信息
+        in: body
+        name: visitor
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateVisitorVO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entity.ResponseObject'
+        "403":
+          description: 用户名重复
+          schema:
+            $ref: '#/definitions/entity.ResponseObject'
+        "500":
+          description: 服务器错误
+          schema:
+            $ref: '#/definitions/entity.ResponseObject'
+      summary: 新增visitor用户
       tags:
       - Visitor接口
 swagger: "2.0"
