# entity/ResponseObject.go
@@ -1,11 +1,11 @@
 package entity
 
-type ResponseBody struct {
+type ResponseObject struct {
 	Code    int
 	Message string `example:"Some message about the code."`
 }
 
-func NewResponseBody(code int, message string) (r ResponseBody) {
+func NewResponseObject(code int, message string) (r ResponseObject) {
 	r.Code = code
 	r.Message = message
 	return
